[build-system]
requires = ["setuptools>=65.6.1", "wheel", "cmake>=3.18", "ninja>=1.11.1"]

[tool.yapf]
based_on_style = "pep8"
column_limit = 120
disable_split_list_with_comment = true
each_dict_entry_on_separate_line=false
split_before_named_assigns = false
split_complex_comprehension = true

[tool.yapfignore]
ignore_patterns = [
    # This exclusion is also specified in .pre-commit-config.yaml.
    # - We put it here because if you run yapf directly, we want it to skip the
    #   file.
    # - We also put it in .pre-commit-config because yapf raises an error if
    #   pre-commit runs it but all of the files it might touch are ignored!
    "python/test/unit/language/test_line_info.py"
]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
ignore = ["E501", "E701", "E731", "E741"]
